--- a/lp02.md
+++ b/lp02.md
@@ -2,3 +2,8 @@
 
 Desde que en *Matrix* hubo un bug, la escuela de encuentra asediada 
 por un virus contra el que **Larry** y sus amigos deberán luchar.
+
+En esta aventura, **Larry se enterará de nuevos detalles sobre su destino. 
+
+Como el malvado hacker **Ballmemort** le metió un troyano, en su propio código 
+podría esconderse malware.
